# lex-lang

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  SECURITY.md  docker-compose.yml
crates/conformance/: Cargo.toml
crates/conformance/src/: descriptor.rs  lib.rs  runner.rs  tokens.rs
crates/conformance/tests/: m16.rs  property.rs
crates/core-compiler/: Cargo.toml
crates/core-compiler/src/: check.rs  error.rs  lib.rs  mutation.rs  native.rs  shape.rs
crates/core-compiler/tests/: m9.rs  m9_phase2.rs
crates/lex-api/: Cargo.toml
crates/lex-api/src/: handlers.rs  lib.rs  mcp.rs  web.rs
crates/lex-api/tests/: m8.rs  op_pull.rs  op_push.rs  tenant_and_auth.rs  web_blocked_producer.rs  web_triage.rs  web_users_json.rs
crates/lex-ast/: Cargo.toml
crates/lex-ast/src/: canon_json.rs  canon_print.rs  canonical.rs  canonical_format.rs  canonicalize.rs  dead_branch.rs  ids.rs  lib.rs  patch.rs  transforms.rs
crates/lex-ast/tests/: canonical.rs  canonical_format.rs  dead_branch.rs  patch.rs
crates/lex-bytecode/: Cargo.toml
crates/lex-bytecode/benches/: alloc_heavy.rs  dispatch.rs  field_access.rs  response_build.rs  tuple_build.rs
crates/lex-bytecode/examples/: profile_alloc_heavy.rs  profile_closure_call.rs  profile_deep_tree.rs  profile_list_build.rs  profile_response_build.rs  profile_tailrec.rs  profile_tuple_build.rs  profile_unpack_response.rs
crates/lex-bytecode/src/: arena.rs  compiler.rs  conc_registry.rs  escape.rs  jit_hook.rs  lib.rs  op.rs  parser_runtime.rs  program.rs  shape_registry.rs  value.rs  verify.rs  vm.rs
crates/lex-bytecode/tests/: alloc_heavy_acceptance.rs  arena_codegen.rs  arena_records.rs  closure_canonicality.rs  closures_in_records.rs  from_json.rs  issue_337_pattern_stack.rs  issue_339_lambda_capture.rs  list_ops.rs  response_build_acceptance.rs  run.rs  stack_records.rs  stack_tuples.rs  tuple_build_acceptance.rs
crates/lex-cli/: Cargo.toml
crates/lex-cli/src/: acli.rs  agent_guidelines.rs  ast_merge.rs  audit.rs  branch.rs  capsule_contract.rs  ci.rs  diff.rs  docs.rs  examples_eval.rs  fmt.rs  init.rs  lint.rs  main.rs  merge.rs  op.rs  pkg.rs  repl.rs  test_runner.rs  tool_registry.rs  watch.rs
crates/lex-cli/tests/: agent_sandbox_bench.rs  agent_tool.rs  agent_tool_attestation.rs  ast_diff.rs  ast_merge.rs  attest_filter.rs  attest_import_install.rs  audit.rs  audit_attestation.rs  audit_session_budget.rs  branch_overlay.rs  branch_peek.rs  branch_predicate.rs  canonical_cli.rs  check_effects.rs  check_position_errors.rs  check_rule_tags.rs  cli-skill.txt  docs_api.rs  docs_for_agent.rs  example_eval.rs  init_scaffold.rs  mcp_server.rs  merge_cli.rs  op.rs  pkg_contract.rs  pkg_registry_verify.rs  policy.rs  policy_session_budget.rs  producer_trust_cli.rs  publish.rs  readme_commands.rs  repair_apply.rs  repair_cli.rs  repair_llm.rs  repl.rs  run_from_store.rs  run_jit.rs  run_variant_args.rs  search.rs  (+10 more)
crates/lex-jit/: Cargo.toml
crates/lex-jit/benches/: jit_vs_interp.rs
crates/lex-jit/src/: lib.rs  lower.rs  tier.rs
crates/lex-jit/tests/: jit_coverage_probe.rs  jit_vs_interpreter.rs  jitvm_vs_vm.rs
crates/lex-lsp/: Cargo.toml  README.md
crates/lex-lsp/src/: lib.rs  main.rs
crates/lex-lsp/tests/: end_to_end.rs
crates/lex-runtime/: Cargo.toml
crates/lex-runtime/src/: arena.rs  arrow.rs  builtins.rs  cli.rs  df.rs  handler.rs  http_server.rs  lib.rs  llm.rs  mcp_client.rs  policy.rs  quic.rs  ws.rs
crates/lex-runtime/tests/: analytics_app.rs  arena_lifecycle.rs  budget_runtime.rs  bytes_and_net.rs  canonical_format_e2e.rs  closed_pydantic_issues.rs  conc_ask_in_serve.rs  conc_registry.rs  conc_spawn_thread.rs  concurrent_actor.rs  dead_branch_effects.rs  effect_polymorphism.rs  flow.rs  flow_canonicality.rs  flow_retry_backoff.rs  gateway_app.rs  inbox_app.rs  issue_345.rs  issues_331_332_334.rs  iter_lazy.rs  list_higher_order.rs  list_par_map.rs  list_sort_by.rs  local_imports_e2e.rs  m11.rs  m5.rs  map_from_list_in_serve.rs  map_set.rs  ml_app.rs  net_dial_ws.rs  net_serve.rs  net_serve_http2.rs  net_serve_quic.rs  net_serve_routed.rs  net_serve_with.rs  net_serve_ws_fn_actor.rs  net_serve_ws_fn_auth.rs  net_serve_ws_subprotocol.rs  net_streaming.rs  parse_strict_nested.rs  (+54 more)
crates/lex-search/: Cargo.toml
crates/lex-search/src/: cache.rs  embedder.rs  http.rs  index.rs  lib.rs  mock.rs  scoring.rs
crates/lex-search/tests/: http_integration.rs  index_over_store.rs
crates/lex-store/: Cargo.toml
crates/lex-store/src/: branches.rs  budget.rs  delta.rs  gc.rs  lib.rs  model.rs  planner.rs  policy.rs  store.rs  users.rs
crates/lex-store/tests/: apply_operation.rs  apply_operation_checked.rs  blob_cas.rs  branch_perf.rs  branches.rs  candidate_promote.rs  concurrent_apply.rs  delta_conformance.rs  extract_function.rs  gc_conformance.rs  inline_let.rs  m6.rs  planner.rs  producer_block_gate.rs  producer_trust.rs  publish_program_gate.rs  rename_local.rs  repair_hint.rs  replace_match_arm.rs  required_attestations_gate.rs  run_op_trace.rs  session_budget.rs  session_budget_gate.rs  walk_back_gate.rs
crates/lex-syntax/: Cargo.toml
crates/lex-syntax/src/: lib.rs  loader.rs  parser.rs  printer.rs  syntax.rs  token.rs  workspace.rs
crates/lex-syntax/tests/: comments_417.rs  depth_limit.rs  loader_smoke.rs  round_trip.rs  trailing_commas.rs  underscore_idents.rs
crates/lex-trace/: Cargo.toml
crates/lex-trace/src/: diff.rs  lib.rs  recorder.rs  replay.rs
crates/lex-trace/tests/: m7.rs
crates/lex-types/: Cargo.toml
crates/lex-types/src/: builtins.rs  checker.rs  discharge.rs  env.rs  error.rs  lib.rs  position.rs  rules.rs  trust.rs  types.rs  unifier.rs
crates/lex-types/tests/: all_errors_566.rs  check.rs  effect_parameterization.rs  effect_row_polymorphism.rs  effect_soundness.rs  (+6 more)
crates/lex-vcs/: Cargo.toml  README.md
crates/spec-checker/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: effect_soundness.rs  parser.rs  type_checker.rs
(+165 files in other folders)
