[workspace]
resolver = "2"
members = [
    "crates/lex-syntax",
    "crates/lex-ast",
    "crates/lex-types",
    "crates/lex-bytecode",
    "crates/lex-store",
    "crates/lex-trace",
    "crates/lex-runtime",
    "crates/lex-stdlib",
    "crates/lex-cli",
    "crates/lex-api",
    "crates/core-syntax",
    "crates/core-compiler",
    "crates/spec-checker",
    "crates/conformance",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
logos = "0.14"
indexmap = { version = "2", features = ["serde"] }
