[workspace]
resolver = "2"
members = [
    "crates/lex-syntax",
    "crates/lex-ast",
    "crates/lex-types",
    "crates/lex-bytecode",
    "crates/lex-store",
    "crates/lex-search",
    "crates/lex-vcs",
    "crates/lex-trace",
    "crates/lex-runtime",
    "crates/lex-stdlib",
    "crates/lex-cli",
    "crates/lex-api",
    "crates/core-syntax",
    "crates/core-compiler",
    "crates/spec-checker",
    "crates/conformance",
]
# `fuzz/` is a separate crate driven by `cargo fuzz` (libFuzzer +
# nightly). Excluded from the main workspace so `cargo build/test
# --workspace` on stable doesn't try to compile it.
exclude = ["fuzz"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/alpibrusl/lex-lang"
homepage = "https://github.com/alpibrusl/lex-lang"
authors = ["Alpibrupa <https://github.com/alpibrupa>"]
keywords = ["lex", "agent", "effects", "language"]
categories = ["compilers", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
anyhow = "1"
logos = "0.16"
indexmap = { version = "2", features = ["serde"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast"] }
getrandom = "0.2"
hex = "0.4"
