[package]
name = "core-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
lex-types = { path = "../lex-types" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
