[package]
name = "core-compiler"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
matrixmultiply = "0.3"
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
lex-types = { path = "../lex-types" }
lex-bytecode = { path = "../lex-bytecode" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
lex-bytecode = { path = "../lex-bytecode" }
lex-runtime = { path = "../lex-runtime" }
