[package]
name = "lex-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indexmap.workspace = true
tiny_http = "0.12"
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
lex-types = { path = "../lex-types" }
lex-bytecode = { path = "../lex-bytecode" }
lex-runtime = { path = "../lex-runtime" }
lex-store = { path = "../lex-store" }
lex-trace = { path = "../lex-trace" }
lex-vcs = { path = "../lex-vcs" }

[dev-dependencies]
tempfile = "3"
