[package]
name = "lex-api"
description = "HTTP/JSON + MCP server surface for the Lex toolchain."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indexmap.workspace = true
tiny_http = "0.12"
lex-syntax = { path = "../lex-syntax", version = "0.2.1" }
lex-ast = { path = "../lex-ast", version = "0.2.1" }
lex-types = { path = "../lex-types", version = "0.2.1" }
lex-bytecode = { path = "../lex-bytecode", version = "0.2.1" }
lex-runtime = { path = "../lex-runtime", version = "0.2.1" }
lex-store = { path = "../lex-store", version = "0.2.1" }
lex-trace = { path = "../lex-trace", version = "0.2.1" }
lex-vcs = { path = "../lex-vcs", version = "0.2.1" }

[dev-dependencies]
tempfile = "3"
