[package]
name = "lex-ast"
description = "Canonical AST + content-addressed identity for Lex programs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-syntax = { path = "../lex-syntax", version = "0.2.0" }
