[package]
name = "lex-bytecode"
description = "Bytecode compiler + VM for Lex."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
smol_str.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
sha2.workspace = true
arrow-array = "58"
arrow-schema = "58"
lex-ast = { path = "../lex-ast", version = "0.9.5" }
lex-types = { path = "../lex-types", version = "0.9.5" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax", version = "0.9.5" }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "dispatch"
harness = false

[[bench]]
name = "field_access"
harness = false
