[package]
name = "lex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lex"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indexmap.workspace = true
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
lex-types = { path = "../lex-types" }
lex-bytecode = { path = "../lex-bytecode" }
lex-runtime = { path = "../lex-runtime" }
lex-store = { path = "../lex-store" }
lex-trace = { path = "../lex-trace" }
lex-api = { path = "../lex-api" }
conformance = { path = "../conformance" }
spec-checker = { path = "../spec-checker" }
