[package]
name = "lex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lex"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indexmap.workspace = true
sha2.workspace = true
ureq = { version = "3.3", default-features = false, features = ["rustls", "platform-verifier", "json"] }
tiny_http = "0.12"
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
lex-types = { path = "../lex-types" }
lex-bytecode = { path = "../lex-bytecode" }
lex-runtime = { path = "../lex-runtime" }
lex-store = { path = "../lex-store" }
lex-vcs = { path = "../lex-vcs" }
lex-trace = { path = "../lex-trace" }
lex-api = { path = "../lex-api" }
conformance = { path = "../conformance" }
spec-checker = { path = "../spec-checker" }
acli = "0.5"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
tempfile = "3"
