[package]
name = "lex-cli"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lex"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indexmap.workspace = true
sha2.workspace = true
ureq = { version = "3.3", default-features = false, features = ["rustls", "platform-verifier", "json"] }
flate2 = "1"
tar = "0.4"
tiny_http = "0.12"
lex-syntax = { path = "../lex-syntax" }
lex-ast = { path = "../lex-ast" }
lex-types = { path = "../lex-types" }
lex-bytecode = { path = "../lex-bytecode" }
lex-runtime = { path = "../lex-runtime" }
lex-store = { path = "../lex-store" }
lex-search = { path = "../lex-search" }
lex-vcs = { path = "../lex-vcs" }
lex-trace = { path = "../lex-trace" }
lex-jit = { path = "../lex-jit", features = ["cranelift"] }
lex-api = { path = "../lex-api" }
conformance = { path = "../conformance" }
spec-checker = { path = "../spec-checker" }
acli = "0.5"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
