[package]
name = "lex-lsp"
description = "Language Server Protocol bridge for Lex — pipes lex-types' type-checker diagnostics to editor inline-error surfaces."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "lex-lsp"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
# LSP protocol shim. `lsp-server` ships the JSON-RPC framing +
# message dispatch over stdin/stdout (no async runtime —
# it's a single-threaded sync loop, which matches LSP's
# request/response shape and avoids pulling tokio into the
# workspace). `lsp-types` is the protocol-message schema. Both
# are rust-analyzer-team-maintained.
lsp-server = "0.7"
lsp-types = "0.97"
lex-syntax = { path = "../lex-syntax", version = "0.9.2" }
lex-ast = { path = "../lex-ast", version = "0.9.2" }
lex-types = { path = "../lex-types", version = "0.9.2" }
# Phase 4 of #304: surface RepairHint attestations from the store.
lex-vcs = { path = "../lex-vcs", version = "0.9.2" }
lex-store = { path = "../lex-store", version = "0.9.2" }

[dev-dependencies]
tempfile = "3"
