[package]
name = "lex-runtime"
description = "Effect handler runtime + capability policy for Lex."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
sha2.workspace = true
hmac = "0.13"
regex = "1"
sled = "0.34"
walkdir = "2"
glob = "0.3"
chrono = "0.4"
chrono-tz = "0.10"
md-5 = "0.11"
base64 = "0.22"
hex = "0.4"
subtle = "2.6"
rand = { version = "0.9", features = ["os_rng"] }
tiny_http = { version = "0.12", features = ["ssl-rustls"] }
tungstenite = "0.29"
ureq = { version = "3.3", default-features = false, features = ["rustls", "platform-verifier"] }
toml = "0.9"
serde_yaml = "0.9"
csv = "1"
rusqlite = { version = "0.36", features = ["bundled"] }
lex-bytecode = { path = "../lex-bytecode", version = "0.2.2" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax", version = "0.2.2" }
lex-ast = { path = "../lex-ast", version = "0.2.2" }
lex-types = { path = "../lex-types", version = "0.2.2" }
tempfile = "3"
