[package]
name = "lex-runtime"
description = "Effect handler runtime + capability policy for Lex."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
sha2.workspace = true
hmac = "0.13"
blake2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = { version = "0.13", default-features = false }
hkdf = "0.13"
argon2 = "0.5"
regex = "1"
sled = "0.34"
walkdir = "2"
glob = "0.3"
chrono = "0.4"
chrono-tz = "0.10"
md-5 = "0.11"
base64 = "0.22"
hex = "0.4"
subtle = "2.6"
rand = { version = "0.10", features = ["sys_rng"] }
tiny_http = { version = "0.12", features = ["ssl-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
ureq = { version = "3.3", default-features = false, features = ["rustls", "platform-verifier"] }
toml = "1.1"
serde_yaml = "0.9"
csv = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
postgres = "0.19"
lex-bytecode = { path = "../lex-bytecode", version = "0.9.2" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax", version = "0.9.2" }
lex-ast = { path = "../lex-ast", version = "0.9.2" }
lex-types = { path = "../lex-types", version = "0.9.2" }
tempfile = "3"
