[package]
name = "lex-store"
description = "Content-addressed on-disk store for Lex stages, branches, and traces."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-ast = { path = "../lex-ast", version = "0.2.1" }
lex-trace = { path = "../lex-trace", version = "0.2.1" }
lex-types = { path = "../lex-types", version = "0.2.1" }
lex-vcs = { path = "../lex-vcs", version = "0.2.1" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax", version = "0.2.1" }
tempfile = "3"
