[package]
name = "lex-store"
description = "Content-addressed on-disk store for Lex stages, branches, and traces."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
# Advisory file locking for #262's CAS branch advance. Already a
# transitive dep via tempfile; promoting to direct so the lock
# call sites compile.
fs2 = "0.4"
lex-ast = { path = "../lex-ast", version = "0.4.0" }
lex-trace = { path = "../lex-trace", version = "0.4.0" }
lex-types = { path = "../lex-types", version = "0.4.0" }
lex-vcs = { path = "../lex-vcs", version = "0.4.0" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax", version = "0.4.0" }
tempfile = "3"
