[package]
name = "lex-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
logos.workspace = true
indexmap.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
