[package]
name = "lex-syntax"
description = "Tokenizer + parser for the Lex programming language."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
logos.workspace = true
indexmap.workspace = true
sha2.workspace = true
toml = "1"
ureq = { version = "3.3", default-features = false, features = ["rustls", "platform-verifier"] }
flate2 = "1"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
