[package]
name = "lex-trace"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-bytecode = { path = "../lex-bytecode" }
lex-ast = { path = "../lex-ast" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax" }
lex-runtime = { path = "../lex-runtime" }
