[package]
name = "lex-trace"
description = "Run-time trace tree + replay for Lex programs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-bytecode = { path = "../lex-bytecode", version = "0.2.0" }
lex-ast = { path = "../lex-ast", version = "0.2.0" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax", version = "0.2.0" }
lex-runtime = { path = "../lex-runtime", version = "0.2.0" }
