[package]
name = "lex-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-ast = { path = "../lex-ast" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax" }
