[package]
name = "lex-vcs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-store = { path = "../lex-store" }

[dev-dependencies]
lex-ast = { path = "../lex-ast" }
lex-syntax = { path = "../lex-syntax" }
tempfile = "3"