[package]
name = "lex-vcs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lex-ast = { path = "../lex-ast" }
lex-types = { path = "../lex-types" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
tempfile = "3"
lex-syntax = { path = "../lex-syntax" }
