[package]
name = "lex-vcs"
description = "Agent-native version control: typed op log + attestation graph."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lex-ast = { path = "../lex-ast", version = "0.2.2" }
lex-types = { path = "../lex-types", version = "0.2.2" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[dev-dependencies]
tempfile = "3"
lex-syntax = { path = "../lex-syntax", version = "0.2.2" }
