[package]
name = "spec-checker"
description = "Property-based and runtime-gate checker for Lex specs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
indexmap.workspace = true
lex-syntax = { path = "../lex-syntax", version = "0.2.2" }
lex-ast = { path = "../lex-ast", version = "0.2.2" }
lex-types = { path = "../lex-types", version = "0.2.2" }
lex-bytecode = { path = "../lex-bytecode", version = "0.2.2" }
lex-runtime = { path = "../lex-runtime", version = "0.2.2" }

[dev-dependencies]
lex-syntax = { path = "../lex-syntax", version = "0.2.2" }
